# FastAPI-Template

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .dockerignore  .env  Dockerfile  docker-compose.yaml  pyproject.toml
{{cookiecutter.project_name}}/src/{{ cookiecutter.project_slug }}/: app.py  db.py  deps.py  init.py  settings.py  supervisord.conf
{{cookiecutter.project_name}}/src/{{ cookiecutter.project_slug }}/crons/: {{ cookiecutter.project_slug }}_cron.py
{{cookiecutter.project_name}}/src/{{ cookiecutter.project_slug }}/handler/: {{ cookiecutter.resource_name }}.py
{{cookiecutter.project_name}}/src/{{ cookiecutter.project_slug }}/models/: global_models.py  {{ cookiecutter.resource_name }}.py
{{cookiecutter.project_name}}/src/{{ cookiecutter.project_slug }}/routes/: {{ cookiecutter.resource_name }}.py
{{cookiecutter.project_name}}/tests/: test_{{ cookiecutter.project_slug }}_service.py
{{cookiecutter.project_name}}/{{ cookiecutter.project_slug }}/: app.py  db.py  init.py  settings.py
{{cookiecutter.project_name}}/{{ cookiecutter.project_slug }}/handler/: __init__.py  {{ cookiecutter.resource_name }}.py
{{cookiecutter.project_name}}/{{ cookiecutter.project_slug }}/models/: __init__.py
{{cookiecutter.project_name}}/{{ cookiecutter.project_slug }}/routes/: __init__.py  {{ cookiecutter.resource_name }}.py
